﻿dotNetRDF
=========

A Library for RDF manipulation and parsing in .Net using C# 3.0

Robert Vesse 2009-11
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.6.0 release of dotNetRDF

Added
- Core
 - URIs are now interned to reduce memory usage and speed up equality comparisons
 - Improved configurability of HashTable so perfomance can be tailored to usage
- Parsing
 - Support for parsing W3C standard Turtle (allows for more QNames, case insensitive boolean literals and single quoted literals)
 - Registered text/boolean parser for SPARQL Results
- Storage
 - All HTTP based storage now supports HTTP proxying

Changed
- Bug Fixes
 - Fixed a bug with long URIs and SparqlRemoteUpdateEndpoint
 - Critical bug where connecting to an AllegroGraph 4.x repository cleared existing data
 - Fixed a bug whereby Blank Node IDs in NTriples output could be invalid
 - Fixed a bug where QNames in RDF/XML weren't fully validated against the latest revisions of the XML specs
- Query
 - Major refactor of SPARQL expression evaluation to make it more efficient and maintainable
 - Replaced the Join algorithm with a new algorithm which is significantly faster
 - Improved selectivity of TriplePattern.GetTriples()
 - Some refactoring of ISparqlDataset interface
- Writing
 - Support for outputting W3C standard Turtle (allows for more URIs to be compressed to QNames)
 - WriteThroughHandler periodically flushes the output stream


Removed
- Legacy SQL Store support

   



