@@ -20,13 +20,13 @@ namespace VDS.RDF.Test.Parsing
         [TestMethod, ExpectedException(typeof(ArgumentNullException))]
         public void ParsingBlockingTextReaderBadInstantiation()
         {
-            BlockingTextReader reader = new BlockingTextReader((TextReader)null);
+            BlockingTextReader reader = BlockingTextReader.Create((TextReader)null);
         }
 
         [TestMethod, ExpectedException(typeof(ArgumentException))]
         public void ParsingBlockingTextReaderBadInstantiation2()
         {
-            BlockingTextReader reader = new BlockingTextReader(new StringReader(String.Empty), 0);
+            BlockingTextReader reader = BlockingTextReader.Create(new StringReader(String.Empty), 0);
         }
 
         [TestMethod]
@@ -34,7 +34,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             StringBuilder output = new StringBuilder();
             while (!reader.EndOfStream)
@@ -56,7 +56,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             char[] cs = new char[100];
             int read = reader.Read(cs, 0, cs.Length);
@@ -76,7 +76,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             char[] cs = new char[100];
             int read = reader.ReadBlock(cs, 0, cs.Length);
@@ -96,7 +96,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             String s = reader.ReadToEnd();
             Assert.AreEqual(TestData, s);
@@ -111,7 +111,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             String s = reader.ReadLine();
             Assert.AreEqual(TestData, s);
@@ -126,7 +126,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData2);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             String s = reader.ReadLine();
             Assert.AreEqual(TestData2.Substring(0, 26), s);
@@ -143,7 +143,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData3);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             String s = reader.ReadLine();
             Assert.AreEqual(TestData3.Substring(0, 26), s);
@@ -160,7 +160,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData4);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             String s = reader.ReadLine();
             Assert.AreEqual(TestData4.Substring(0, 26), s);
@@ -179,7 +179,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData5);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             String s = reader.ReadLine();
             Assert.AreEqual(TestData5.Substring(0, 26), s);
@@ -196,7 +196,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             for (int i = 1; i <= 100; i++)
             {
@@ -215,7 +215,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader);
 
             char[] cs = new char[10];
             int start = 0;
@@ -239,7 +239,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader, 5);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader, 5);
 
             char[] cs = new char[10];
             int start = 0;
@@ -265,7 +265,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader, 5);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader, 5);
 
             char[] cs = new char[8];
             int start = 0;
@@ -291,7 +291,7 @@ namespace VDS.RDF.Test.Parsing
         {
             StringReader strReader = new StringReader(TestData);
 
-            BlockingTextReader reader = new BlockingTextReader(strReader, 2);
+            BlockingTextReader reader = BlockingTextReader.Create(strReader, 2);
 
             char[] cs = new char[10];
             int start = 0;
