@@ -27,6 +27,8 @@ Changed
  - Critical bug where connecting to an AllegroGraph 4.x repository cleared existing data
  - Fixed a bug whereby Blank Node IDs in NTriples output could be invalid
  - Fixed a bug where QNames in RDF/XML weren't fully validated against the latest revisions of the XML specs
+- Parsing
+ - Constructors for BlockingTextReader and now private, use BlockingTextReader.Create() static instead
 - Query
  - Major refactor of SPARQL expression evaluation to make it more efficient and maintainable
  - Replaced the Join algorithm with a new algorithm which is significantly faster
@@ -39,6 +41,7 @@ Changed
 
 Removed
 - Legacy SQL Store support
+- Obsolete BlockingStreamReader class
 
    
 
